@@ -1,3 +1,9 @@
+2007-10-21  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in: bump libxklavier requirement to 3.3
+	* capplets/keyboard/gnome-keyboard-properties-xkbmc.c: remove
+	compatibility hack for libxklavier <= 3.2
+
 2007-10-18  Bastien Nocera  <hadess@hadess.net>
 
 	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
